jupyter tomato_analysis.ipynb

--- a/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
+++ b/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
@@ -40,7 +40,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Debug"
+    "Debug counter"
    ],
    "metadata": {
     "collapsed": false
@@ -96,7 +96,7 @@
    "execution_count": 31,
    "outputs": [],
    "source": [
-    "def trackers_into_plot(df_tree, df_res):\n",
+    "def trackers_into_plot(df_tree, df_res, mode='counter'):\n",
     "    df_tree['end'].replace([-1], math.inf,inplace=True)\n",
     "    plot_det = []\n",
     "    for i, df_frame in df_res.groupby(['frame']):\n",
@@ -107,9 +107,11 @@
     "        limit = limit.iloc[0]\n",
     "        df = df_frame[(df_frame['x1'] > limit['start']) & (df_frame['x1'] < limit['end'])]\n",
     "        plot_det.append(df)\n",
-    "\n",
-    "    fruits = len(pd.concat(plot_det,axis=0)['track_id'].unique())\n",
-    "    return fruits"
+    "    if mode == 'counter':\n",
+    "        var = len(pd.concat(plot_det,axis=0)['track_id'].unique())\n",
+    "    elif mode == 'size':\n",
+    "        var = pd.concat(plot_det,axis=0).groupby('trak_id')['width'].mean()\n",
+    "    return var"
    ],
    "metadata": {
     "collapsed": false
@@ -120,16 +122,16 @@
    "execution_count": 32,
    "outputs": [],
    "source": [
-    "def run(scan,output):\n",
+    "def run_counter(scan,output):\n",
     "    df_sum = pd.DataFrame()\n",
     "    for row in os.listdir(scan):\n",
     "        row_folder = os.path.join(scan,row)\n",
-    "        if os.path.isfile(row_folder):\n",
+    "        if not row.__contains__('TiltDown'):\n",
     "            continue\n",
     "        df_res = filter_logic(row_folder)\n",
     "        trees_slices = slice_to_trees(os.path.join(row_folder, [i for i in os.listdir(row_folder) if 'slice_data' in i][0]),None,None)\n",
     "        fruits_num = trackers_into_plot(trees_slices,df_res)\n",
-    "        df_sum = df_sum.append({'repeat':row,'fruits_num':fruits_num},ignore_index = True)\n",
+    "        df_sum = df_sum.append({'repeat':row, 'fruits_num':fruits_num},ignore_index = True)\n",
     "    df_sum.to_csv(output,index=True,header=True,mode='w')\n",
     "    return df_sum"
    ],
@@ -223,7 +225,7 @@
    "source": [
     "scan_folder = fr'/media/yotam/Extreme SSD/syngenta trail/tomato/analysis/281222'\n",
     "output_path = fr'/media/yotam/Extreme SSD/syngenta trail/tomato/analysis/281222/results.csv'\n",
-    "DF = run(scan_folder,output_path)"
+    "df_sum_counter = run_counter(scan_folder,output_path)"
    ],
    "metadata": {
     "collapsed": false
@@ -232,7 +234,44 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Color debug"
+    "Debug size"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def run_size(scan,output):\n",
+    "    df_sum = pd.DataFrame()\n",
+    "    for row in os.listdir(scan):\n",
+    "        row_folder = os.path.join(scan,row)\n",
+    "        if not row.__contains__('TiltDown'):\n",
+    "            continue\n",
+    "        df_res = filter_logic(row_folder)\n",
+    "        trees_slices = slice_to_trees(os.path.join(row_folder, [i for i in os.listdir(row_folder) if 'slice_data' in i][0]),None,None)\n",
+    "        size_df = trackers_into_plot(trees_slices,df_res)\n",
+    "        size_df.hist(by=['width'])\n",
+    "    df_sum.to_csv(output,index=True,header=True,mode='w')\n",
+    "    return df_sum"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Debug Color"
    ],
    "metadata": {
     "collapsed": false
