jupyter tomato_analysis.ipynb

--- a/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
+++ b/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
@@ -76,15 +76,22 @@
    "execution_count": 30,
    "outputs": [],
    "source": [
-    "def filter_logic(path):\n",
+    "def filter_logic(path,analysis='counter'):\n",
     "    df = pd.read_csv(os.path.join(path,'measures.csv'))\n",
-    "    df_res = []\n",
-    "    ids = df.groupby(['track_id'])\n",
-    "    for _, df_id in ids:\n",
-    "        # if len(df_id) < 4:\n",
-    "        #     continue\n",
-    "        df_res.append(df_id)\n",
-    "    df_res = pd.concat(df_res)\n",
+    "\n",
+    "    if analysis == 'size':\n",
+    "        df = df[(df['width']<90) and (df['height']<90)]\n",
+    "        df_res = df[df.apply(lambda x: False if x.width/x.height > 1.25 or x.width/x.height < 0.9 else True,axis=1)]\n",
+    "    else:\n",
+    "        df_res = df\n",
+    "\n",
+    "    # df_res = []\n",
+    "    # ids = df.groupby(['track_id'])\n",
+    "    # for _, df_id in ids:\n",
+    "    #     # if len(df_id) < 4:\n",
+    "    #     #     continue\n",
+    "    #     df_res.append(df_id)\n",
+    "    # df_res = pd.concat(df_res)\n",
     "    return df_res"
    ],
    "metadata": {
@@ -96,7 +103,7 @@
    "execution_count": 31,
    "outputs": [],
    "source": [
-    "def trackers_into_plot(df_tree, df_res, mode='counter'):\n",
+    "def trackers_into_plot(df_tree, df_res, analysis='counter'):\n",
     "    df_tree['end'].replace([-1], math.inf,inplace=True)\n",
     "    plot_det = []\n",
     "    for i, df_frame in df_res.groupby(['frame']):\n",
@@ -107,9 +114,9 @@
     "        limit = limit.iloc[0]\n",
     "        df = df_frame[(df_frame['x1'] > limit['start']) & (df_frame['x1'] < limit['end'])]\n",
     "        plot_det.append(df)\n",
-    "    if mode == 'counter':\n",
+    "    if analysis == 'counter':\n",
     "        var = len(pd.concat(plot_det,axis=0)['track_id'].unique())\n",
-    "    elif mode == 'size':\n",
+    "    elif analysis == 'size':\n",
     "        var = pd.concat(plot_det,axis=0).groupby('trak_id')['width'].mean()\n",
     "    return var"
    ],
@@ -130,7 +137,7 @@
     "            continue\n",
     "        df_res = filter_logic(row_folder)\n",
     "        trees_slices = slice_to_trees(os.path.join(row_folder, [i for i in os.listdir(row_folder) if 'slice_data' in i][0]),None,None)\n",
-    "        fruits_num = trackers_into_plot(trees_slices,df_res)\n",
+    "        fruits_num = trackers_into_plot(trees_slices,df_res,analysis='counter')\n",
     "        df_sum = df_sum.append({'repeat':row, 'fruits_num':fruits_num},ignore_index = True)\n",
     "    df_sum.to_csv(output,index=True,header=True,mode='w')\n",
     "    return df_sum"
@@ -254,10 +261,11 @@
     "        row_folder = os.path.join(scan,row)\n",
     "        if not row.__contains__('TiltDown'):\n",
     "            continue\n",
-    "        df_res = filter_logic(row_folder)\n",
+    "        df_res = filter_logic(row_folder,analysis='size')\n",
     "        trees_slices = slice_to_trees(os.path.join(row_folder, [i for i in os.listdir(row_folder) if 'slice_data' in i][0]),None,None)\n",
     "        size_df = trackers_into_plot(trees_slices,df_res)\n",
-    "        size_df.hist(by=['width'])\n",
+    "        plt.hist(size_df)\n",
+    "        plt.show()\n",
     "    df_sum.to_csv(output,index=True,header=True,mode='w')\n",
     "    return df_sum"
    ],
