jupyter tomato_analysis.ipynb

--- a/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
+++ b/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
@@ -256,7 +256,6 @@
    "outputs": [],
    "source": [
     "def run_size(scan,output):\n",
-    "    df_sum = pd.DataFrame()\n",
     "    for row in os.listdir(scan):\n",
     "        row_folder = os.path.join(scan,row)\n",
     "        if not row.__contains__('TiltDown'):\n",
@@ -265,9 +264,23 @@
     "        trees_slices = slice_to_trees(os.path.join(row_folder, [i for i in os.listdir(row_folder) if 'slice_data' in i][0]),None,None)\n",
     "        size_df = trackers_into_plot(trees_slices,df_res)\n",
     "        plt.hist(size_df)\n",
-    "        plt.show()\n",
-    "    df_sum.to_csv(output,index=True,header=True,mode='w')\n",
-    "    return df_sum"
+    "        plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "scan_folder = fr'/media/yotam/Extreme SSD/syngenta trail/tomato/analysis/281222'\n",
+    "output_path = fr'/media/yotam/Extreme SSD/syngenta trail/tomato/analysis/281222/results.csv'\n",
+    "run_size(scan_folder,output_path)"
    ],
    "metadata": {
     "collapsed": false,
