--- a/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
+++ b/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
@@ -65,7 +65,8 @@
     "# from vision.data.results_collector import ResultsCollector\n",
     "from vision.tools.manual_slicer import slice_to_trees\n",
     "import math\n",
-    "# import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ],
    "metadata": {
     "collapsed": false
