color filtering track ids, robustere size aggregation

--- a/vision/pipelines/scripts/syngenta_hue_analysis.ipynb
+++ b/vision/pipelines/scripts/syngenta_hue_analysis.ipynb
@@ -74,6 +74,7 @@
    "outputs": [],
    "source": [
     "measures_path = \"/home/fruitspec-lab/Downloads/tomato/analysis/230123/pre/5/measures_pix_size_mean_hue_depth.csv\"\n",
+    "measures_path = \"/home/fruitspec-lab/Downloads/0.8m1stm/output/measures.csv\"\n",
     "measures_frame = pd.read_csv(measures_path)"
    ]
   },
@@ -444,14 +445,14 @@
     "\n",
     "    return out_frame\n",
     "cam = video_wrapper(args.movie_path, args.rotate, args.depth_minimum, args.depth_maximum)\n",
-    "for frame_number in range(50,800, 5):\n",
+    "for frame_number in range(150,340, 2):\n",
     "    rgb_img, _, pc_img = cam.get_zed(frame_number)\n",
     "    if isinstance(rgb_img, type(None)):\n",
     "        continue\n",
     "    rgb_img = rgb_img[:,:,::-1]\n",
     "    boxes_for_frame = measures_frame[measures_frame[\"frame\"]==frame_number].values\n",
     "    plt.figure(figsize = (10,10))\n",
-    "    plt.imshow(draw_dets(rgb_img.astype(np.uint8), boxes_for_frame)[900:-300,:,:])\n",
+    "    plt.imshow(draw_dets(rgb_img.astype(np.uint8), boxes_for_frame)[600:-300,:,:])\n",
     "    plt.title(frame_number)\n",
     "    plt.show()\n",
     "cam.close()"
@@ -510,7 +511,7 @@
    "outputs": [],
    "source": [
     "53, 163, 471, 1112, 1910\n",
-    "track_id = 227\n",
+    "track_id = 526\n",
     "cam = video_wrapper(args.movie_path, args.rotate, args.depth_minimum, args.depth_maximum)\n",
     "frame_numbers = get_track_id_frames(measures_frame, track_id)\n",
     "i = len(frame_numbers) -1\n",
@@ -556,7 +557,7 @@
     "            return (128,0,128)\n",
     "    return (0,255,0)\n",
     "\n",
-    "track_id = 1443\n",
+    "track_id = 526\n",
     "cam = video_wrapper(args.movie_path, args.rotate, args.depth_minimum, args.depth_maximum)\n",
     "frame_numbers = get_track_id_frames(measures_frame, track_id)\n",
     "boxes = get_track_id_boxes(measures_frame, track_id)\n",
