analyzer diff_size - correcting the firmula
utils - get_size_set - filtering outlier boxes by w,h ratio
added filter by color

--- a/vision/pipelines/scripts/syngenta_hue_analysis.ipynb
+++ b/vision/pipelines/scripts/syngenta_hue_analysis.ipynb
@@ -401,7 +401,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
     "        w_025 = int(w/4)\n",
     "        h_025 = int(h/4)\n",
     "        hue_cut = hue[h_025:-h_025,w_025:-w_025]\n",
-    "        mean_hue_cut, median_hue_cut = np.nanmean(hue_cut), np.nanmedian(hue_cut)\n",
+    "        mean_hue_cut, median_hue_cut = np.nanmean(hue_cut[hue_cut<60]), np.nanmedian(hue_cut[hue_cut<60])\n",
     "        if median_hue_cut * 1.15 > mean_hue_cut: # low \"skew\"\n",
     "            return (255,255,0)\n",
     "        else:\n",
@@ -437,11 +437,15 @@
     "        x1,y1,x2,y2 = validate_bbox(det[:4].astype(np.int), frame)\n",
     "        track_id = det[t_index]\n",
     "        color_id = int(track_id) % 15  # 15 is the number of colors in list\n",
-    "        color = get_color(frame[y1:y2, x1:x2])\n",
+    "        rgb_crop = frame[y1:y2, x1:x2]\n",
+    "        color = get_color(rgb_crop)\n",
+    "        hsv = cv2.cvtColor(rgb_crop.astype(np.uint8), cv2.COLOR_RGB2HSV)\n",
+    "        hue, sat, val = cv2.split(hsv.copy())\n",
+    "        mean_hue_g_60 = np.mean(hue > 60)\n",
     "        text_color = (0,0,0)\n",
     "        out_frame = draw_rectangle(out_frame, (int(det[0]), int(det[1])), (int(det[2]), int(det[3])), color, 3)\n",
-    "        out_frame = draw_highlighted_test(out_frame, f'ID:{track_id}', (det[0], det[1]), frame.shape[1],\n",
-    "                                          color, text_color, True, 10, 3)\n",
+    "        out_frame = draw_highlighted_test(out_frame, f'ID:{int(track_id)}_{int(mean_hue_g_60*100)}%', (det[0], det[1]), frame.shape[1],\n",
+    "                                          color, text_color, True, 7, 3)\n",
     "\n",
     "    return out_frame\n",
     "cam = video_wrapper(args.movie_path, args.rotate, args.depth_minimum, args.depth_maximum)\n",
@@ -456,6 +460,15 @@
     "    plt.title(frame_number)\n",
     "    plt.show()\n",
     "cam.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
    ]
   },
   {
@@ -538,6 +551,13 @@
     "        return (255,255,255)\n",
     "    hsv = cv2.cvtColor(rgb_crop.astype(np.uint8), cv2.COLOR_RGB2HSV)\n",
     "    hue, sat, val = cv2.split(hsv.copy())\n",
+    "    \n",
+    "#     hue_mask = hue < 60\n",
+    "#     if np.mean(hue_mask) < 0.6:\n",
+    "#         hue_mask = np.full(hue.shape,True)\n",
+    "#     mean_hue, median_hue = np.nanmean(hue[hue_mask]), np.nanmedian(hue[hue_mask])\n",
+    "#     hist_vals, hist_bins = np.histogram(hue[hue_mask], bins = 100)\n",
+    "    \n",
     "    mean_hue, median_hue = np.nanmean(hue), np.nanmedian(hue)\n",
     "    hist_vals, hist_bins = np.histogram(hue, bins = 100)\n",
     "    mode_hue = hist_bins[np.argmax(hist_vals)]\n",
@@ -550,7 +570,7 @@
     "        w_025 = int(w/4)\n",
     "        h_025 = int(h/4)\n",
     "        hue_cut = hue[h_025:-h_025,w_025:-w_025]\n",
-    "        mean_hue_cut, median_hue_cut = np.nanmean(hue_cut), np.nanmedian(hue_cut)\n",
+    "        mean_hue_cut, median_hue_cut = np.nanmean(hue_cut[hue_cut<60]), np.nanmedian(hue_cut[hue_cut<60])\n",
     "        if median_hue_cut * 1.15 > mean_hue_cut: # low \"skew\"\n",
     "            return (255,255,0)\n",
     "        else:\n",
@@ -574,12 +594,20 @@
     "    h_025 = int(h/4)\n",
     "    hsv = cv2.cvtColor(rgb_crop, cv2.COLOR_RGB2HSV)\n",
     "    hue, sat, val = cv2.split(hsv.copy())\n",
+    "    \n",
+    "#     hue_mask = hue < 60\n",
+    "#     if np.mean(hue_mask) < 0.6:\n",
+    "#         hue_mask = np.full(hue.shape,True)\n",
+    "#     mean_hue, median_hue = np.nanmean(hue[hue_mask]), np.nanmedian(hue[hue_mask])\n",
+    "#     hist_vals, hist_bins = np.histogram(hue[hue_mask], bins = 100)\n",
+    "    \n",
+    "    \n",
     "    mean_hue, median_hue = np.nanmean(hue), np.nanmedian(hue)\n",
     "    hist_vals, hist_bins = np.histogram(hue, bins = 100)\n",
     "    mode_hue = hist_bins[np.argmax(hist_vals)]\n",
     "    hue_cut = hue[h_025:-h_025,w_025:-w_025]\n",
-    "    mean_hue_cut, median_hue_cut = np.nanmean(hue_cut), np.nanmedian(hue_cut)\n",
-    "    hist_vals_cut, hist_bins_cut = np.histogram(hue_cut, bins = 100)\n",
+    "    mean_hue_cut, median_hue_cut = np.nanmean(hue_cut[hue_cut<60]), np.nanmedian(hue_cut[hue_cut<60])\n",
+    "    hist_vals_cut, hist_bins_cut = np.histogram(hue_cut[hue_cut<60], bins = 100)\n",
     "    mode_hue_cut = hist_bins_cut[np.argmax(hist_vals_cut)]\n",
     "    \n",
     "    color = get_color(rgb_crop)\n",
@@ -589,11 +617,32 @@
     "    rgb_crop[:,-1] = color\n",
     "    print(f\"\"\"mean:, {mean_hue}, median: {median_hue}, mode: {mode_hue}, std: {np.nanstd(hue)} \\n\n",
     "          mean:, {mean_hue_cut}, median: {median_hue_cut}, mode: {mode_hue_cut}, std: {np.nanstd(hue_cut)}\"\"\")\n",
-    "    plt.hist(hue.flatten(), bins = 50,density = True)\n",
+    "    plt.hist(hue.flatten(), bins = 100,density = True)\n",
     "    plt.show()\n",
     "    plt.imshow(rgb_crop)\n",
     "    plt.title(frame)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track_id = 406\n",
+    "frame_numbers = get_track_id_frames(measures_frame, track_id)\n",
+    "boxes = get_track_id_boxes(measures_frame, track_id)\n",
+    "for i in range(len(frame_numbers)):\n",
+    "    frame, box = frame_numbers[i], boxes[i]\n",
+    "    rgb_img, _, pc_img = cam.get_zed(frame)\n",
+    "    x1,y1,x2,y2 = validate_bbox(box, rgb_img)\n",
+    "    pc_crop = pc_img[y1:y2, x1:x2,:3]\n",
+    "    rgb_crop = rgb_img[y1:y2, x1:x2, ::-1]\n",
+    "    hsv = cv2.cvtColor(rgb_crop, cv2.COLOR_RGB2HSV)\n",
+    "    hue, sat, val = cv2.split(hsv.copy())\n",
+    "    rgb_crop_c = hue > 60\n",
+    "    plot_2_imgs(rgb_crop, rgb_crop_c,frame)"
    ]
   },
   {
