fixed weight firmula
fixed wight calculations for mean and sigma

changed diff_size_by_normal mu, sigma calculations

rgb_pipeline - trk_outputs instead of filtered outputs

utils - gmm fix and debug option

added run_on_blocks

--- a/vision/pipelines/scripts/syngenta_hue_analysis.ipynb
+++ b/vision/pipelines/scripts/syngenta_hue_analysis.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -73,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "measures_path = \"/home/fruitspec-lab/Downloads/tomato/analysis/230123/pre/5/measures_pix_size_mean_hue_depth.csv\"\n",
-    "measures_path = \"/home/fruitspec-lab/Downloads/0.8m1stm/output/measures.csv\"\n",
+    "measures_path = \"/home/fruitspec-lab/Downloads/tomato/analysis/230123/pre/5/measures_pix_size_median_hue_depth.csv\"\n",
+    "# measures_path = \"/home/fruitspec-lab/Downloads/0.8m1stm/output/measures.csv\"\n",
     "measures_frame = pd.read_csv(measures_path)"
    ]
   },
@@ -108,6 +118,8 @@
     "                                for arr in [titles, xlabels, ylabels])\n",
     "    fig, axs = plt.subplots(nrows, ncols, figsize=figsize)\n",
     "    for i, ax in enumerate(axs.flat):\n",
+    "        if i == n_images:\n",
+    "            break\n",
     "        image = images[i]\n",
     "        ax.imshow(image)\n",
     "        ax.set_title(titles[i])\n",
@@ -273,7 +285,6 @@
     "    y2 = min(y2, h-1)\n",
     "    return x1, y1, x2, y2\n",
     "\n",
-    "\n",
     "def get_track_id_images(measures_frame, track_id, args):\n",
     "    cam = video_wrapper(args.movie_path, args.rotate, args.depth_minimum, args.depth_maximum)\n",
     "    frame_numbers = get_track_id_frames(measures_frame, track_id)\n",
@@ -310,6 +321,38 @@
     "    filtered_center = centers.copy()\n",
     "    filtered_center[points_density <thresh/ len(finite_logical)] = np.nan\n",
     "    return filtered_center"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for track_id in range(200, 1000):\n",
+    "    rgb_images = get_track_id_images(measures_frame, track_id, args)[0]\n",
+    "    print(track_id)\n",
+    "    plot_image_grid(rgb_images, int(np.ceil(len(rgb_images)/5)), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
    ]
   },
   {
@@ -541,9 +584,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.ceil(len(imgs)/5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for trak_id in range(1000):\n",
+    "    imgs = get_track_id_images(measures_frame, trak_id, args)[0]\n",
+    "    plot_image_grid(imgs, int(np.ceil(len(imgs)/5)),5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "def get_color(rgb_crop):\n",
+    "    if not len(rgb_crop):\n",
+    "        return (255,255,255)\n",
+    "    hsv = cv2.cvtColor(rgb_crop.astype(np.uint8), cv2.COLOR_RGB2HSV)\n",
+    "    hue, sat, val = cv2.split(hsv.copy())\n",
+    "    \n",
+    "#     hue_mask = hue < 60\n",
+    "#     if np.mean(hue_mask) < 0.6:\n",
+    "#         hue_mask = np.full(hue.shape,True)\n",
+    "#     mean_hue, median_hue = np.nanmean(hue[hue_mask]), np.nanmedian(hue[hue_mask])\n",
+    "#     hist_vals, hist_bins = np.histogram(hue[hue_mask], bins = 100)\n",
+    "    \n",
+    "    mean_hue, median_hue = np.nanmean(hue), np.nanmedian(hue)\n",
+    "    hist_vals, hist_bins = np.histogram(hue, bins = 100)\n",
+    "    mode_hue = hist_bins[np.argmax(hist_vals)]\n",
+    "    if mode_hue < 10:\n",
+    "        return (255,0,0)\n",
+    "    if mode_hue < 17.5:\n",
+    "        return (255,125,0)\n",
+    "    if mode_hue < 45:\n",
+    "        w, h = rgb_crop.shape[:2]\n",
+    "        w_025 = int(w/4)\n",
+    "        h_025 = int(h/4)\n",
+    "        hue_cut = hue[h_025:-h_025,w_025:-w_025]\n",
+    "        mean_hue_cut, median_hue_cut = np.nanmean(hue_cut[hue_cut<60]), np.nanmedian(hue_cut[hue_cut<60])\n",
+    "        if median_hue_cut * 1.15 > mean_hue_cut: # low \"skew\"\n",
+    "            return (255,255,0)\n",
+    "        else:\n",
+    "            return (128,0,128)\n",
+    "    return (0,255,0)\n",
+    "\n",
+    "track_id = 405\n",
+    "cam = video_wrapper(args.movie_path, args.rotate, args.depth_minimum, args.depth_maximum)\n",
+    "frame_numbers = get_track_id_frames(measures_frame, track_id)\n",
+    "boxes = get_track_id_boxes(measures_frame, track_id)\n",
+    "i = 7\n",
+    "for i in range(len(frame_numbers)):\n",
+    "    frame, box = frame_numbers[i], boxes[i]\n",
+    "    rgb_img, _, pc_img = cam.get_zed(frame)\n",
+    "    x1,y1,x2,y2 = validate_bbox(box, rgb_img)\n",
+    "    pc_crop = pc_img[y1:y2, x1:x2,:3]\n",
+    "    rgb_crop = rgb_img[y1:y2, x1:x2, ::-1]\n",
+    "    rgb_c = rgb_crop.copy()\n",
+    "    w, h = rgb_crop.shape[:2]\n",
+    "    w_025 = int(w/4)\n",
+    "    h_025 = int(h/4)\n",
+    "    hsv = cv2.cvtColor(rgb_crop, cv2.COLOR_RGB2HSV)\n",
+    "    hue, sat, val = cv2.split(hsv.copy())\n",
+    "    \n",
+    "#     hue_mask = hue < 60\n",
+    "#     if np.mean(hue_mask) < 0.6:\n",
+    "#         hue_mask = np.full(hue.shape,True)\n",
+    "#     mean_hue, median_hue = np.nanmean(hue[hue_mask]), np.nanmedian(hue[hue_mask])\n",
+    "#     hist_vals, hist_bins = np.histogram(hue[hue_mask], bins = 100)\n",
+    "    \n",
+    "    \n",
+    "    mean_hue, median_hue = np.nanmean(hue), np.nanmedian(hue)\n",
+    "    hist_vals, hist_bins = np.histogram(hue, bins = 100)\n",
+    "    mode_hue = hist_bins[np.argmax(hist_vals)]\n",
+    "    hue_cut = hue[h_025:-h_025,w_025:-w_025]\n",
+    "    mean_hue_cut, median_hue_cut = np.nanmean(hue_cut[hue_cut<60]), np.nanmedian(hue_cut[hue_cut<60])\n",
+    "    hist_vals_cut, hist_bins_cut = np.histogram(hue_cut[hue_cut<60], bins = 100)\n",
+    "    mode_hue_cut = hist_bins_cut[np.argmax(hist_vals_cut)]\n",
+    "    \n",
+    "    color = get_color(rgb_crop)\n",
+    "    rgb_crop[0,:] = color\n",
+    "    rgb_crop[-1,:] = color\n",
+    "    rgb_crop[:,0] = color\n",
+    "    rgb_crop[:,-1] = color\n",
+    "    print(f\"\"\"mean:, {mean_hue}, median: {median_hue}, mode: {mode_hue}, std: {np.nanstd(hue)} \\n\n",
+    "          mean:, {mean_hue_cut}, median: {median_hue_cut}, mode: {mode_hue_cut}, std: {np.nanstd(hue_cut)}\"\"\")\n",
+    "    plt.hist(hue.flatten(), bins = 100,density = True)\n",
+    "    plt.show()\n",
+    "    plt.imshow(rgb_crop)\n",
+    "    plt.title(frame)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_color(rgb_crop):\n",
