debug plots - test

--- a/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
+++ b/vision/tools/jupyter_notebooks/tomato_analysis.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "fruit_tpe='tomato'\n",
     "scan_date = '010323'\n",
     "main_path = r'C:\\Users\\frodo\\OneDrive - FruitSpec\\Syngenta'\n",
     "\n",
     "df = pd.read_csv(rf\"{main_path}\\{fruit_tpe}\\{scan_date}\\fs_harvest_report.csv\")\n",
     "# insert DB - queries txt file\n",
-    "project_id = 0000\n",
+    "project_id = 8721\n",
     "txt_file = open(rf\"{main_path}\\{fruit_tpe}\\{scan_date}\\\\updateMySQL.txt\",\"w\")\n",
     "for i,row in df.iterrows():\n",
     "    q = f\"\"\"\n",
@@ -26,7 +28,8 @@
     "    txt_file.writelines(q)\n",
     "    # txt_file.write('\\n')\n",
     "\n",
-    "txt_file.close()"
+    "txt_file.close()\n",
+    "df[['stage', 'plot_code','FS_variety', 'count', 'bin1', 'bin2', 'bin3', 'bin4', 'bin5', 'total_weight_kg', 'weight_avg_gr', 'weight_std', 'size_avg_mm', 'size_std']].to_csv(rf\"{main_path}\\{fruit_tpe}\\{scan_date}\\harvest_report.csv\",index=False)"
    ],
    "metadata": {
     "collapsed": false,
